archive/keycloak/overlays/in-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - keycloak.k8s.integratn.tech
    secretName: keycloak-tls
  rules:
  - host: keycloak.k8s.integratn.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              name: http
